Code before debug

--- a/ZagorskiMichal/cw02/zad1/Makefile
+++ b/ZagorskiMichal/cw02/zad1/Makefile
@@ -3,7 +3,9 @@ CFLAGS=-Wall -pedantic -std=c99
 EXEC = readfile generator
 OBJ = readfile.o generator.o
 SRC = readfile.c generator.c
-
+FILE = file
+R_SIZE = 4 512 1024 2048 4096 8192
+R_COUNT = 1000 2000 5000 10000 100
 
 all: clean $(EXEC)
 	@echo "Build finished succesfully"
@@ -11,10 +13,19 @@ all: clean $(EXEC)
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
-$(EXEC): $(OBJ)
+#$(EXEC): $(OBJ)
+% : %.o
 	$(CC) $(CFLAGS) $< -o $@ 
+run: $(R_SIZE) $(R_COUNT) 
+	@echo "Running generator"
+	# @ for O in R_COUNT{
+	# 	for
+	# }
+	# @cp $(FILE) $(FILE)_lib
+	# @cp $(FILE) $(FILE)_sys
 
-.PHONY: clean all
+
+.PHONY: clean all run
 clean:
 	@echo "Cleaning project"
 	@rm -f *.o
