First task complete

--- a/ZagorskiMichal/cw02/zad1/Makefile
+++ b/ZagorskiMichal/cw02/zad1/Makefile
@@ -1,32 +1,33 @@
 CC=gcc
 CFLAGS=-Wall -pedantic -std=c99
-EXEC = readfile generator
-OBJ = readfile.o generator.o
-SRC = readfile.c generator.c
-FILE = file
-R_SIZE = 4 512 1024 2048 4096 8192
-R_COUNT = 1000 2000 5000 10000 100
-
+EXEC =readfile.exe generator.exe
+OBJ =readfile.o generator.o
+SRC =readfile.c generator.c
+FILE =file
+CFLAGS += -O3
 all: clean $(EXEC)
 	@echo "Build finished succesfully"
+
+run: $(EXEC)
+	@echo "Running generator and test programs"
+	./run.sh > readfile.log
+
+compile: $(EXEC)
 	
+%.exe : %.o
+	$(CC) $(CFLAGS) $< -o $@
 %.o: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
 
-#$(EXEC): $(OBJ)
-% : %.o
-	$(CC) $(CFLAGS) $< -o $@ 
-run: $(R_SIZE) $(R_COUNT) 
-	@echo "Running generator"
-	# @ for O in R_COUNT{
-	# 	for
-	# }
-	# @cp $(FILE) $(FILE)_lib
-	# @cp $(FILE) $(FILE)_sys
-
-
-.PHONY: clean all run
+#.PHONY: clean all run
+.PHONY: all
 clean:
 	@echo "Cleaning project"
-	@rm -f *.o
+	@rm -rf files
 	@rm -f $(EXEC)
+	@echo "Cleaning done"
+
+clean_res: clean
+	@echo "Cleaning results"
+	@rm -f wyniki.txt readfile.log
+	@echo "Cleaning done"
