Catcher and sender based on sigsuspend

--- a/ZagorskiMichal/cw04/zad2a/Makefile
+++ b/ZagorskiMichal/cw04/zad2a/Makefile
@@ -1,9 +1,9 @@
 CC=gcc
-CFLAGS=-Wall -pedantic -std=c99
+CFLAGS=-Wall -pedantic -std=c99 -O0
 EXEC=catcher sender
 OBJS=catcher.o sender.o
 SRCS=catcher.c sender.c
-CFLAGS += -g
+#CFLAGS += -g
 all: compile run
 #@echo "Build finished succesfully"
 
