--- a/ZagorskiMichal/cw05/zad3/Makefile
+++ b/ZagorskiMichal/cw05/zad3/Makefile
@@ -1,8 +1,8 @@
 CC=gcc
 CFLAGS=-Wall -pedantic -std=c99 -O0
-EXEC=catcher sender
-OBJS=catcher.o sender.o
-SRCS=catcher.c sender.c
+EXEC=prog
+OBJS=prog.o
+SRCS=prog.c
 #CFLAGS += -g
 all: compile run
 
