Excercise complete, finished task 2, correction of handle macro

--- a/ZagorskiMichal/cw05/zad2/Makefile
+++ b/ZagorskiMichal/cw05/zad2/Makefile
@@ -1,8 +1,8 @@
 CC=gcc
 CFLAGS=-Wall -pedantic -std=c99 -O0
-EXEC=catcher sender
-OBJS=catcher.o sender.o
-SRCS=catcher.c sender.c
+EXEC=rdfifo wrfifo
+OBJS=rdfifo.o wrfifo.o
+SRCS=rdfifo.c wrfifo.c
 #CFLAGS += -g
 all: compile run
 
@@ -12,6 +12,7 @@ compile: $(EXEC)
 % : %.o
 	$(CC) $(CFLAGS) $< -o $@
 %.o: %.c
+	echo $@
 	$(CC) $(CFLAGS) -c $< -o $@
 .PHONY: clean all run
 clean:
